--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 13 13:33:09 BRT 2021
-sdk.dir=/Users/lsantosb/Library/Android/sdk
+#Tue Apr 13 14:32:36 BRT 2021
+sdk.dir=C\:\\Users\\ksilvper\\AppData\\Local\\Android\\Sdk
