--- a/local.properties
+++ b/local.properties
@@ -4,15 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Tue Apr 13 15:09:23 BRT 2021
+#Wed Apr 14 10:59:33 BRT 2021
+>>>>>>>=develop
 sdk.dir=/Users/lsantosb/Library/Android/sdk
-=======
-<<<<<<< HEAD
-#Tue Apr 13 14:32:36 BRT 2021
-sdk.dir=C\:\\Users\\ksilvper\\AppData\\Local\\Android\\Sdk
-=======
-#Tue Apr 13 14:47:47 BRT 2021
-sdk.dir=C\:\\Users\\apaulaoa\\AppData\\Local\\Android\\Sdk
->>>>>>> feat/RecyclerView
->>>>>>> develop
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
