--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-<<<<<<< HEAD
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
-=======
-    id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
->>>>>>> SearchImplementation
+
 }
 
 android {
@@ -40,6 +36,9 @@ android {
 }
 
 dependencies {
+
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
     //Api
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
